--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css\global.css" rel="stylesheet">
-    <link href="css\landing.css" rel="stylesheet">
-    <title>Coffee Shop - Home</title>
+    <link href="css/global.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <title>Travel Site - Home</title>
 </head>
 <body>
     <header>
