--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
         <h2>Recommendations</h2>
         <section class="cards">
 
-            <div class="cards__img--hawaii">
+            <div class="cards__item cards__img--hawaii">
                 <!-- <img src="assets/Images/hawaii.jpg" alt="hawaii" class="card__image"> -->
                 <h3>Hawaii</h3>
             </div>
     
-            <div class="cards__img--iceland">
+            <div class="cards__item cards__img--iceland">
                 <!-- <img src="assets/Images/iceland.jpg" alt="iceland" class="card__image"> -->
                 <h3>Iceland</h3>
             </div>
             
-            <div class="cards__img--greece">
+            <div class="cards__item cards__img--greece">
                 <!-- <img src="assets/Images/greece.jpg" alt="greece" class="card__image"> -->
                 <h3>Greece</h3>
             </div>
