--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -11,13 +11,15 @@
     <header>
         <nav>
             <div>
-                <p class="wordmark">Travel Site</p> 
+                <a href="../index.html"><h3 class="wordmark">Travel Site</h3></a> 
             </div>
             <div>
-                <a href="../index.html">Home</a>  
-                <a href="hawaii.html">Hawaii</a> 
-                <a class="active" href="iceland.html">Iceland</a>
-                <a href="greece.html">Greece</a>
+                <li>
+                    <ul><a href="../index.html">Home</a></ul>
+                    <ul><a href="pages/hawaii.html">Hawaii</a></ul>
+                    <ul><a class="active" href="pages/iceland.html">Iceland</a></ul>
+                    <ul><a href="pages/greece.html">Greece</a></ul>
+                </li>
             </div>
         </nav>  
     </header>
@@ -61,7 +63,7 @@
         <div>
             <h2>Contact</h2>
             <div class="more__info">
-                <h4>EMAIL</h4>
+                <h6>EMAIL</h6>
                 <p>info@travesite.com</p>
             </div>
         </div>
@@ -69,17 +71,17 @@
         <div>
             <h2>Hours</h2>
                 <div class="more__info">
-                    <h4>MONDAY-FRIDAY</h4>
+                    <h6>MONDAY-FRIDAY</h6>
                     <p>9:00 AM - 5:00 PM</p>
                 </div>
                 
                 <div class="more__info">
-                    <h4>SATURDAY</h4>
+                    <h6>SATURDAY</h6>
                     <p>10:00 AM - 4:00 PM</p>
                 </div>
                 
                 <div class="more__info">
-                    <h4>SUNDAY</h4>
+                    <h6>SUNDAY</h6>
                     <p>Closed</p>
                 </div>    
         </div>
