--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
     <header>
         <nav>
             <div>
-                <h3 class="wordmark">Travel Site</h3> 
+                <a href="index.html"><h3 class="wordmark">Travel Site</h3></a>
             </div>
             <div>
-                <a class="active" href="index.html">Home</a>  
-                <a href="pages/hawaii.html">Hawaii</a> 
-                <a href="pages/iceland.html">Iceland</a>
-                <a href="pages/greece.html">Greece</a>
+                <li>
+                    <ul><a class="active" href="index.html">Home</a></ul>
+                    <ul><a href="pages/hawaii.html">Hawaii</a></ul>
+                    <ul><a href="pages/iceland.html">Iceland</a></ul>
+                    <ul><a href="pages/greece.html">Greece</a></ul>
+                </li>
             </div>
         </nav>  
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
-        <div>
-            <h1 class="slogan">Travelling comes with endless discoveries</h1>
+        <div class="hero__info">
+            <h1>Travelling Comes With Endless Discoveries</h1>
             <p>Don't let your dreams be just dreams.Experience the world by booking a vacation with us now.</p>
-            <button>Get Started</button>
+            <button>Get started</button>
         </div>
         <div>
             <img src="assets/Images/hero.png" alt="Hero Image">
@@ -59,7 +61,7 @@
         <div>
             <h2>Contact</h2>
             <div class="more__info">
-                <h4>EMAIL</h4>
+                <h6>EMAIL</h6>
                 <p>info@travesite.com</p>
             </div>
         </div>
@@ -67,17 +69,17 @@
         <div>
             <h2>Hours</h2>
                 <div class="more__info">
-                    <h4>MONDAY-FRIDAY</h4>
+                    <h6>MONDAY-FRIDAY</h6>
                     <p>9:00 AM - 5:00 PM</p>
                 </div>
                 
                 <div class="more__info">
-                    <h4>SATURDAY</h4>
+                    <h6>SATURDAY</h6>
                     <p>10:00 AM - 4:00 PM</p>
                 </div>
                 
                 <div class="more__info">
-                    <h4>SUNDAY</h4>
+                    <h6>SUNDAY</h6>
                     <p>Closed</p>
                 </div>    
         </div>
