--- a/pages/greece.html
+++ b/pages/greece.html
@@ -14,12 +14,12 @@
                 <a href="../index.html"><h3 class="wordmark">Travel Site</h3></a> 
             </div>
             <div>
-                <li>
-                    <ul><a  href="../index.html">Home</a></ul>
-                    <ul><a href="pages/hawaii.html">Hawaii</a></ul>
-                    <ul><a href="pages/iceland.html">Iceland</a></ul>
-                    <ul><a class="active" href="pages/greece.html">Greece</a></ul>
-                </li>
+                <ul>
+                    <li><a  href="../index.html">Home</a></li>
+                    <li><a href="pages/hawaii.html">Hawaii</a></li>
+                    <li><a href="pages/iceland.html">Iceland</a></li>
+                    <li><a class="active" href="pages/greece.html">Greece</a></li>
+                </ul>
             </div>
         </nav>  
     </header>
@@ -27,32 +27,37 @@
     <main class="bg__img--greece">
 
         <h1>Greece</h1>
-        <!-- <img src="../assets/Images/hawaii.jpg" src="hawaii"> -->
 
         <section class="cards">
 
             <div class="cards__item">
-                <h4>Friday</h4>
-                <p>Breakfast</p>
-                <p>Lunch</p>
-                <p>Dinner</p>
-                <p>Dancing</p>
+                <h3>Friday</h3>
+                <ul>
+                    <li>Breakfast</li>
+                    <li>Lunch</li>
+                    <li>Dinner</li>
+                    <li>Dancing</li>
+                </ul>
             </div>
 
             <div class="cards__item">
-                <h4>Saturday</h4>
-                <p>Breakfast</p>
-                <p>Lunch</p>
-                <p>Dinner</p>
-                <p>Dancing</p>
+                <h3>Saturday</h3>
+                <ul>
+                    <li>Breakfast</li>
+                    <li>Lunch</li>
+                    <li>Dinner</li>
+                    <li>Dancing</li>
+                </ul>
             </div>
 
             <div class="cards__item">
-                <h4>Sunday</h4>
-                <p>Breakfast</p>
-                <p>Lunch</p>
-                <p>Dinner</p>
-                <p>Dancing</p>
+                <h3>Sunday</h3>
+                <ul>
+                    <li>Breakfast</li>
+                    <li>Lunch</li>
+                    <li>Dinner</li>
+                    <li>Dancing</li>
+                </ul>
             </div>
 
         </section>
