--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -14,12 +14,12 @@
                 <a href="../index.html"><h3 class="wordmark">Travel Site</h3></a>
             </div>
             <div>
-                <li>
-                    <ul><a href="../index.html">Home</a></ul>
-                    <ul><a class="active" href="pages/hawaii.html">Hawaii</a></ul>
-                    <ul><a href="pages/iceland.html">Iceland</a></ul>
-                    <ul><a href="pages/greece.html">Greece</a></ul>
-                </li>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a class="active" href="pages/hawaii.html">Hawaii</a></li>
+                    <li><a href="pages/iceland.html">Iceland</a></li>
+                    <li><a href="pages/greece.html">Greece</a></li>
+                </ul>
             </div>
         </nav>  
     </header>
@@ -27,32 +27,37 @@
     <main class="bg__img--hawaii">
 
         <h1>Hawaii</h1>
-        <!-- <img src="../assets/Images/hawaii.jpg" src="hawaii"> -->
 
         <section class="cards">
 
             <div class="cards__item">
                 <h3>Friday</h3>
-                <p>Breakfast</p>
-                <p>Lunch</p>
-                <p>Dinner</p>
-                <p>Snorkelling</p>
+                <ul>
+                    <li>Breakfast</li>
+                    <li>Lunch</li>
+                    <li>Dinner</li>
+                    <li>Snorkelling</li>
+                </ul>
             </div>
 
             <div class="cards__item">
                 <h3>Saturday</h3>
-                <p>Breakfast</p>
-                <p>Lunch</p>
-                <p>Dinner</p>
-                <p>Snorkelling</p>
+                <ul>
+                    <li>Breakfast</li>
+                    <li>Lunch</li>
+                    <li>Dinner</li>
+                    <li>Snorkelling</li>
+                </ul>
             </div>
 
             <div class="cards__item">
                 <h3>Sunday</h3>
-                <p>Breakfast</p>
-                <p>Lunch</p>
-                <p>Dinner</p>
-                <p>Snorkelling</p>
+                <ul>
+                    <li>Breakfast</li>
+                    <li>Lunch</li>
+                    <li>Dinner</li>
+                    <li>Snorkelling</li>
+                </ul>
             </div>
 
         </section>
